Refactor endpoints to group them by function
Also, add basic middleware that verifies auth tokens before passing them
on to a protected route
