# go-backend/docs/swagger.yaml
@@ -1,21 +1,16 @@
 basePath: /
 definitions:
-  endpoints.EmailVerifyRequest:
+  authendpoints.emailVerifyRequest:
     properties:
       email:
         type: string
     type: object
-  endpoints.EmailVerifyResponse:
+  authendpoints.emailVerifyResponse:
     properties:
       response:
         type: string
     type: object
-  endpoints.ErrorResponse:
-    properties:
-      error:
-        type: string
-    type: object
-  endpoints.SignUpRequest:
+  authendpoints.signUpRequest:
     properties:
       email:
         type: string
@@ -28,11 +23,16 @@ definitions:
       password:
         type: string
     type: object
-  endpoints.SignUpResponse:
+  authendpoints.signUpResponse:
     properties:
       access_token:
         type: string
       refresh_token:
+        type: string
+    type: object
+  httputils.ErrorResponse:
+    properties:
+      error:
         type: string
     type: object
 info:
@@ -53,38 +53,38 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/endpoints.SignUpRequest'
+          $ref: '#/definitions/authendpoints.signUpRequest'
       produces:
       - application/json
       responses:
         "200":
           description: Signup successful, returns access and refresh tokens
           schema:
-            $ref: '#/definitions/endpoints.SignUpResponse'
+            $ref: '#/definitions/authendpoints.signUpResponse'
         "400":
           description: Incorrect one-time code or bad request
           schema:
-            $ref: '#/definitions/endpoints.ErrorResponse'
+            $ref: '#/definitions/httputils.ErrorResponse'
         "401":
           description: Missing required fields
           schema:
-            $ref: '#/definitions/endpoints.ErrorResponse'
+            $ref: '#/definitions/httputils.ErrorResponse'
         "403":
           description: Email not verified / OTP expired
           schema:
-            $ref: '#/definitions/endpoints.ErrorResponse'
+            $ref: '#/definitions/httputils.ErrorResponse'
         "405":
           description: Method not allowed
           schema:
-            $ref: '#/definitions/endpoints.ErrorResponse'
+            $ref: '#/definitions/httputils.ErrorResponse'
         "409":
           description: Email already in use
           schema:
-            $ref: '#/definitions/endpoints.ErrorResponse'
+            $ref: '#/definitions/httputils.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/endpoints.ErrorResponse'
+            $ref: '#/definitions/httputils.ErrorResponse'
       summary: Sign up a new user
       tags:
       - Auth
@@ -100,34 +100,34 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/endpoints.EmailVerifyRequest'
+          $ref: '#/definitions/authendpoints.emailVerifyRequest'
       produces:
       - application/json
       responses:
         "200":
           description: Email valid
           schema:
-            $ref: '#/definitions/endpoints.EmailVerifyResponse'
+            $ref: '#/definitions/authendpoints.emailVerifyResponse'
         "400":
           description: Invalid email
           schema:
-            $ref: '#/definitions/endpoints.ErrorResponse'
+            $ref: '#/definitions/httputils.ErrorResponse'
         "401":
           description: Missing required fields
           schema:
-            $ref: '#/definitions/endpoints.ErrorResponse'
+            $ref: '#/definitions/httputils.ErrorResponse'
         "405":
           description: Method not allowed
           schema:
-            $ref: '#/definitions/endpoints.ErrorResponse'
+            $ref: '#/definitions/httputils.ErrorResponse'
         "409":
           description: Email already in use
           schema:
-            $ref: '#/definitions/endpoints.ErrorResponse'
+            $ref: '#/definitions/httputils.ErrorResponse'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/endpoints.ErrorResponse'
+            $ref: '#/definitions/httputils.ErrorResponse'
       summary: Verify email for signup
       tags:
       - Auth
